# datalogger-web

./: Average.hs  DataLogger.hs  DeviceList.hs  WebApp.hs  app.css  app.js  chart.css  chart.js  datalogger-web.cabal  index.html  ui.js
