name:                datalogger-web
version:             0.1.0.0
synopsis:            A web interface for interacting with data-logger
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable datalogger-web
  main-is:             WebApp.hs
  other-modules:       DataLogger, DeviceList
  other-extensions:    OverloadedStrings, ExistentialQuantification, RankNTypes
  build-depends:       base >=4.6 && <4.8,
                       stm >=2.4 && <3.0,
                       bytestring >= 0.10 && <1.0,
                       directory >=1.2 && <2.0,
                       filepath >= 1.3 && <2.0,
                       time >= 1.4 && < 1.5,
                       containers >=0.5 && <0.6,
                       vector >= 0.10 && < 1.0,
                       cassava >= 0.2 && < 1.0,
                       errors >=1.4 && <1.5,
                       transformers >=0.3 && <0.4,
                       mtl >=2.0 && <3.0,
                       serialport >=0.4 && <0.5,
                       scotty >=0.6 && <0.7,
                       text >=0.11 && <1.2,
                       trifecta,
                       http-types >=0.8 && <0.9,
                       aeson >=0.6 && <0.8
  default-language:    Haskell2010
